# criti-scan

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
src/criti_scan/: detect_zones.py  extract_png.py  ocr.py  scan.py
src/criti_scan/ocr/: detect_zones.py  extract_png.py  ocr.py  scan.py
src/criti_scan/simulate/: bookdeform.py  model.py  render.py
src/model/: bookdeform.py  model.py  render.py  test_dev_model.ipynb
tests/: test_extract_png.py
